api/k8s/manifests/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fastapi-gateway-api
  name: fastapi-gateway-api
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: fastapi-gateway-api
