api/k8s/manifests/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-gateway-api-ingress
spec:
  rules:
  -  host: api.localhost.com
     http:
       paths:
       -  pathType: Prefix
          path: /
          backend:
            service:
              name: fastapi-gateway-api
              port:
                number: 8000
